Bug 329165 - Closing the app leads to loss of unsaved data
Summary: Closing the app leads to loss of unsaved data
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.10
Platform: unspecified Linux
: NOR critical
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-23 17:21 UTC by Arjun AK
Modified: 2017-03-11 10:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arjun AK 2013-12-23 17:21:43 UTC
Closing the application leads to loss of any unsaved data.

Reproducible: Always

Steps to Reproduce:
1. Make changes to a password
2. Close the application

Actual Results:  
Application closes without asking the user whether the changes should be saved or not. Any unsaved data is lost.

Expected Results:  
Show a messagebox asking whether the changes should be saved or not.
Comment 1 Arjun AK 2013-12-23 17:25:27 UTC
https://git.reviewboard.kde.org/r/114633/
Comment 2 Arjun AK 2013-12-25 05:53:29 UTC
New review request: https://git.reviewboard.kde.org/r/114658/
Comment 3 Valentin Rusu 2013-12-25 11:40:40 UTC
(In reply to comment #2)
> New review request: https://git.reviewboard.kde.org/r/114658/

OK, thans for the new review request. I just post my comments.
Comment 4 Elvis Angelaccio 2017-03-11 10:12:11 UTC
Git commit 77c8b1ad99a335a62e81e98beee92c4ce5d3c405 by Elvis Angelaccio, on behalf of Arjun AK.
Committed on 11/03/2017 at 10:12.
Pushed by elvisangelaccio into branch 'master'.

Show warning dialog before closing with unsaved changes

REVIEW: 118991
FIXED-IN: 17.04.0

M  +13   -3    src/manager/kwalleteditor.cpp
M  +2    -0    src/manager/kwalleteditor.h
M  +26   -0    src/manager/kwalletmanager.cpp
M  +2    -0    src/manager/kwalletmanager.h
M  +19   -1    src/manager/kwalletmanagerwidget.cpp
M  +1    -0    src/manager/kwalletmanagerwidget.h
M  +4    -1    src/manager/kwalletmanagerwidgetitem.cpp
M  +1    -0    src/manager/kwalletmanagerwidgetitem.h
M  +11   -0    src/manager/walletcontrolwidget.cpp
M  +1    -0    src/manager/walletcontrolwidget.h

https://commits.kde.org/kwalletmanager/77c8b1ad99a335a62e81e98beee92c4ce5d3c405