Show warning dialog before closing with unsaved changes

REVIEW: 118991
BUG: 329165
FIXED-IN: 17.04.0